Wednesday night version

--- a/LentWeek1-practical.ipynb
+++ b/LentWeek1-practical.ipynb
@@ -30,10 +30,9 @@
     "import pandas as pd\n",
     "import warnings\n",
     "from IPython.display import HTML as html_print\n",
+    "import seaborn as sns    # for heatmaps\n",
     "\n",
-    "# If not present install with:\n",
-    "#     pip install logomaker\n",
-    "import logomaker"
+    "import logomaker         # if not present install with: pip install logomaker"
    ]
   },
   {
@@ -73,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_seed = 42\n",
+    "random_seed = 2023\n",
     "rng = np.random.default_rng(random_seed)"
    ]
   },
@@ -454,7 +453,7 @@
     "    \n",
     "    # Iterate E and M steps\n",
     "    lls = []\n",
-    "    positions_posterior_matrices = []\n",
+    "    positions_posteriors = []\n",
     "    motifs = []\n",
     "    for n_iter in range(n_iterations):\n",
     "        # Print current log-likelihood\n",
@@ -465,13 +464,59 @@
     "        \n",
     "        # E step\n",
     "        positions_posterior = expectation_step(sequences, est_motif)\n",
-    "        positions_posterior_matrices.append(positions_posterior)\n",
+    "        positions_posteriors.append(positions_posterior)\n",
     "        \n",
     "        # M step\n",
     "        est_motif = maximization_step(sequences, positions_posterior)\n",
     "        motifs.append(est_motif)\n",
     "    \n",
-    "    return est_motif, lls, positions_posterior_matrices, motifs"
+    "    return est_motif, lls, positions_posteriors, motifs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5abb777d",
+   "metadata": {},
+   "source": [
+    "## Plot results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b210bfc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_results(iters,est_motif,lls,posteriors,motifs):\n",
+    "    print (f\"LL with true motif {log_likelihood(sequences,M)}    LL with final estimated motif {lls[-1]}\")\n",
+    "    \n",
+    "    # plot the true and final estimated motifs\n",
+    "    fig, axs = plt.subplots(1, 2, figsize=(12, 3))\n",
+    "    draw_motif(M,ax=axs[0])\n",
+    "    axs[0].set_title(\"True motif\")\n",
+    "    draw_motif(est_motif,ax=axs[1])\n",
+    "    axs[1].set_title(\"Final estimated motif\")\n",
+    "    \n",
+    "    if lls is not None:\n",
+    "        # plot the log likelihoods\n",
+    "        plt.figure()\n",
+    "        plt.plot(lls)\n",
+    "        plt.xlabel(\"# of iteration\")\n",
+    "        plt.ylabel(\"log likelihood\")\n",
+    "    \n",
+    "        # plot heatmaps of the motif locations at given iterations\n",
+    "        fig, axs = plt.subplots(1, len(iters), figsize=(20, 8))\n",
+    "        for ax, n_iter in zip(axs, iters):\n",
+    "            sns.heatmap(posteriors[n_iter][:,:], ax=ax, vmin=0, vmax=1);\n",
+    "            ax.set_title(f\"Iteration # {n_iter}\")\n",
+    "            ax.set_ylabel(\"Sequence #\")\n",
+    "            ax.set_xlabel(\"Position\")\n",
+    "    \n",
+    "        # and below them the motifs\n",
+    "        fig, axs = plt.subplots(1, len(iters), figsize=(20, 2))\n",
+    "        for ax, n_iter in zip(axs, iters):\n",
+    "            draw_motif(motifs[n_iter],ax=ax)"
    ]
   },
   {
@@ -506,7 +551,7 @@
     }
    ],
    "source": [
-    "est_motif, lls, positions_posterior_matrices, motifs = expectation_maximization(sequences, 100, print_every=10)"
+    "est_motif, lls, positions_posteriors, motifs = expectation_maximization(sequences, 100, print_every=10)"
    ]
   },
   {
@@ -516,46 +561,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the log likelihoods\n",
-    "plt.plot(lls)\n",
-    "plt.xlabel(\"# of iteration\")\n",
-    "plt.ylabel(\"log likelihood\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21de8b7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot heatmaps of the motif locations at 4 timepoints\n",
-    "import seaborn as sns\n",
-    "\n",
-    "fig, axs = plt.subplots(1, 4, figsize=(20, 8))\n",
-    "\n",
-    "for ax, n_iter_to_see in zip(axs, [0, 10, 20, 50]):\n",
-    "    sns.heatmap(PP[n_iter_to_see,:,:], ax=ax, vmin=0, vmax=1);\n",
-    "    ax.set_title(f\"Iteration # {n_iter_to_see}\")\n",
-    "    ax.set_ylabel(\"Sequence #\")\n",
-    "    ax.set_xlabel(\"Position\")\n"
+    "plot_results([0,10,20,50],est_motif,lls,positions_posteriors,motifs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9f9ecb78",
+   "id": "ba104549",
    "metadata": {},
    "source": [
-    "You can also use draw_motif(motifs[t]) to show how the motif evolves at various timepoints t"
+    "### Try running the following cell several times. In what ways does the output vary, and why?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bff8cc1",
+   "id": "3089dfc7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "est_motif, lls, positions_posteriors, motifs = expectation_maximization(sequences, 50, print_every=10)\n",
+    "plot_results([], est_motif, lls, positions_posteriors, motifs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b43c953",
+   "metadata": {},
+   "source": [
+    "### Now lets try making different motifs, with different prior Dirichlet alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "091396a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = sample_motif(alpha = 0.1)       # try alpha = 0.2, 0.5, 1, perhaps even more or less\n",
+    "# if it doesn't converge correctly you could try generating more sequences by uncommenting/changing the next line\n",
+    "# num_sequences = 100\n",
+    "sequences, positions = generate_sequences(M)\n",
+    "est_motif, lls, positions_posteriors, motifs = expectation_maximization(sequences, 50, print_every=10)\n",
+    "plot_results([], est_motif, lls, positions_posteriors, motifs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -572,11 +621,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_likelihood_with_positions(\n",
-    "    sequences,\n",
-    "    positions,\n",
-    "    motif,\n",
-    "):\n",
+    "def log_likelihood_with_positions(sequences, positions, motif):\n",
+    "\n",
     "    # Initialize\n",
     "    ll = 0.0\n",
     "    max_position = sequence_length - motif_length + 1\n",
@@ -601,11 +647,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gibbs_sample_position(\n",
-    "    sequences,\n",
-    "    est_motif,\n",
-    "    rng,\n",
-    "):\n",
+    "def gibbs_sample_position(sequences, est_motif, rng):\n",
+    "\n",
     "    max_position = sequence_length - motif_length + 1\n",
     "\n",
     "    # Draw new positions\n",
@@ -624,12 +667,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_posterior_dirichlet_parameters(\n",
-    "    alpha,\n",
-    "    sequences,\n",
-    "    positions,\n",
-    "    motif_length,\n",
-    "):\n",
+    "def calculate_posterior_dirichlet_parameters(alpha, sequences, positions, motif_length):\n",
+    "\n",
     "    max_position = sequence_length - motif_length + 1\n",
     "    \n",
     "    # Calculate the posterior dirichlet parameters\n",
@@ -650,13 +689,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gibbs_sample_motif(\n",
-    "    alpha,\n",
-    "    sequences,\n",
-    "    est_positions,\n",
-    "    motif_length,\n",
-    "    rng,\n",
-    "):\n",
+    "def gibbs_sample_motif(alpha, sequences, est_positions, motif_length, rng):\n",
+    "\n",
     "    max_position = sequence_length - motif_length + 1\n",
     "    \n",
     "    # Calculate the dirichelt parameters\n",
@@ -683,14 +717,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def metropolis_hastings_step(\n",
-    "    sequences,\n",
-    "    est_positions,\n",
-    "    est_motif,    \n",
-    "    current_ll,\n",
-    "    max_position,\n",
-    "    rng,\n",
-    "):\n",
+    "def metropolis_hastings_step(sequences, est_positions, est_motif, current_ll, max_position, rng):\n",
+    "\n",
     "    # Make new state\n",
     "    if rng.random() < 0.5:\n",
     "        # abcdefgh -> habcdefg\n",
@@ -717,27 +745,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd618f9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "id": "c841aa81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mcmc_sampling(\n",
-    "    sequences,\n",
-    "    motif_length,\n",
-    "    alpha,\n",
-    "    n_iterations,\n",
-    "    with_shifts=False,\n",
-    "    print_every=None,     # for detail, debugging\n",
-    "):\n",
+    "def mcmc_sampling(sequences, motif_length, alpha, n_iterations, with_shifts=False, print_every=None):\n",
+    "\n",
     "    # Initialize the motif estimate randomly\n",
     "    est_motif = rng.random(size=(motif_length, 4))\n",
     "    est_motif /= est_motif.sum(axis=1)[:, np.newaxis]\n",
@@ -783,8 +797,6 @@
     "            all_shifted.append(shifted)\n",
     "        \n",
     "    return lls, all_shifted, states\n",
-    "    \n",
-    "\n",
     "    "
    ]
   },
@@ -793,7 +805,14 @@
    "id": "20e3187a",
    "metadata": {},
    "source": [
-    "## Run it!"
+    "## Run it several times, both with shifts off (default) and shifts on\n",
+    "How do these results compare with the EM solutions?\n",
+    "\n",
+    "Look carefully at the log_likelihood values for the final solution. How are the final estimated motifs and their likelihoods different from those obtained by EM?\n",
+    "\n",
+    "What happens when we allow shift operations using Metropolis-Hastings?\n",
+    "\n",
+    "How does the number of iterations required compare with EM? What might be sensible numbers for the burn-in period and for taking random samples from the Markov chain? Maybe it would be interesting to try MCMC with a variety of motifs made with different values of alpha (remember to sample new sequences also when you make a new motif M)."
    ]
   },
   {
@@ -820,39 +839,9 @@
     }
    ],
    "source": [
-    "lls, all_shifted, states = mcmc_sampling(\n",
-    "    sequences,\n",
-    "    motif_length,\n",
-    "    alpha,\n",
-    "    1000,\n",
-    "    with_shifts=True,\n",
-    "    print_every=100,\n",
-    ")"
+    "est_motif, lls, states = mcmc_sampling(sequences, motif_length, alpha, 500, with_shifts=False, print_every=50)\n",
+    "plot_results([],est_motif, lls, None, None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "444c058e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e28f16e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ea835b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
