tidying up for draft version to distribute

--- a/LentWeek1-practical.ipynb
+++ b/LentWeek1-practical.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5abb777d",
+   "id": "61e99d46",
    "metadata": {},
    "source": [
     "## Plot results"
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b210bfc2",
+   "id": "6f6a63cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba104549",
+   "id": "0be364f9",
    "metadata": {},
    "source": [
     "### Try running the following cell several times. In what ways does the output vary, and why?"
@@ -575,33 +575,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3089dfc7",
+   "id": "c8d6f628",
    "metadata": {},
    "outputs": [],
    "source": [
-    "est_motif, lls, positions_posteriors, motifs = expectation_maximization(sequences, 50, print_every=10)\n",
-    "plot_results([], est_motif, lls, positions_posteriors, motifs)"
+    "plot_results([], *expectation_maximization(sequences, 50, print_every=10))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b43c953",
+   "id": "21553b51",
    "metadata": {},
    "source": [
-    "### Now lets try making different motifs, with different prior Dirichlet alpha"
+    "### Now lets try making different motifs, with different prior Dirichlet alpha\n",
+    "What seem to be constraints on the ability to find the motif?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "091396a7",
+   "id": "95378bb5",
    "metadata": {},
    "outputs": [],
    "source": [
     "M = sample_motif(alpha = 0.1)       # try alpha = 0.2, 0.5, 1, perhaps even more or less\n",
-    "# if it doesn't converge correctly you could try generating more sequences by uncommenting/changing the next line\n",
+    "# if it hasn't converged correctly you could try generating more sequences by uncommenting/changing the next line\n",
     "# num_sequences = 100\n",
     "sequences, positions = generate_sequences(M)\n",
+    "# and if it hasn't converged by 50 iterations you could increase the number 50 in the next line\n",
     "est_motif, lls, positions_posteriors, motifs = expectation_maximization(sequences, 50, print_every=10)\n",
     "plot_results([], est_motif, lls, positions_posteriors, motifs)"
    ]
@@ -611,7 +612,7 @@
    "id": "dec5dc66",
    "metadata": {},
    "source": [
-    "# 3. MCMC"
+    "# 3. Monte-Carlo Markov Chain (MCMC)"
    ]
   },
   {
@@ -647,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gibbs_sample_position(sequences, est_motif, rng):\n",
+    "def gibbs_sample_position(sequences, est_motif):\n",
     "\n",
     "    max_position = sequence_length - motif_length + 1\n",
     "\n",
@@ -655,7 +656,7 @@
     "    positions_posterior = expectation_step(sequences, est_motif)\n",
     "    positions = np.zeros(len(sequences), dtype=int)\n",
     "    for n in range(num_sequences):\n",
-    "        positions[n] = rng.choice(max_position, p=positions_posterior[n])\n",
+    "        positions[n] = rng.choice(max_position, p=***) # fill in the distribution used to select the position\n",
     "        \n",
     "    return positions\n"
    ]
@@ -689,22 +690,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gibbs_sample_motif(alpha, sequences, est_positions, motif_length, rng):\n",
+    "def gibbs_sample_motif(alpha, sequences, est_positions, motif_length):\n",
     "\n",
     "    max_position = sequence_length - motif_length + 1\n",
     "    \n",
     "    # Calculate the dirichelt parameters\n",
-    "    dirichlet_parameters = calculate_posterior_dirichlet_parameters(\n",
-    "        alpha,\n",
-    "        sequences,\n",
-    "        est_positions,\n",
-    "        motif_length,\n",
-    "    )            \n",
+    "    dirichlet_parameters = calculate_posterior_dirichlet_parameters(alpha, sequences, est_positions,motif_length)\n",
     "    \n",
     "    # Draw new motif from this distribution\n",
     "    est_motif = np.zeros((motif_length, 4), dtype=float)\n",
     "    for k in range(motif_length):\n",
-    "        est_motif[k, :] = rng.dirichlet(dirichlet_parameters[k])\n",
+    "        est_motif[k, :] = rng.dirichlet(***) # fill in the parameter set to sample from\n",
     "        \n",
     "    return est_motif\n",
     "    "
@@ -717,7 +713,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def metropolis_hastings_step(sequences, est_positions, est_motif, current_ll, max_position, rng):\n",
+    "def metropolis_hastings_step(sequences, est_positions, est_motif, current_ll, max_position):\n",
     "\n",
     "    # Make new state\n",
     "    if rng.random() < 0.5:\n",
@@ -773,27 +769,15 @@
     "            print(f\"Iteration {n_iter}: LL = {ll}\")\n",
     "            \n",
     "        # Draw new positions\n",
-    "        est_positions = gibbs_sample_position(sequences, est_motif, rng)\n",
+    "        est_positions = gibbs_sample_position(sequences, est_motif)\n",
     "        \n",
     "        # Draw new motif\n",
-    "        est_motif = gibbs_sample_motif(\n",
-    "            alpha,\n",
-    "            sequences,\n",
-    "            est_positions,\n",
-    "            motif_length,\n",
-    "            rng,\n",
-    "        )\n",
+    "        est_motif = gibbs_sample_motif(alpha, sequences, est_positions, motif_length)\n",
     "        \n",
     "        # Possible shift\n",
     "        if with_shifts:\n",
-    "            est_motif, est_positions, shifted = metropolis_hastings_step(\n",
-    "                sequences,\n",
-    "                est_positions,\n",
-    "                est_motif,    \n",
-    "                ll,\n",
-    "                max_position,\n",
-    "                rng,\n",
-    "            )\n",
+    "            est_motif, est_positions, shifted = metropolis_hastings_step(sequences, est_positions, est_motif,\n",
+    "                                                                         ll, max_position)\n",
     "            all_shifted.append(shifted)\n",
     "        \n",
     "    return lls, all_shifted, states\n",
