fixed draw_motif() ax definition bug

--- a/LentWeek1-practical.ipynb
+++ b/LentWeek1-practical.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "37601fe0",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
     "        print(motif)\n",
     "        \n",
     "\n",
-    "def draw_motif(motif, title=\"\"):\n",
+    "def draw_motif(motif, title=\"\", ax=None):\n",
     "    \"\"\"\n",
     "    Draw a logo of the motif with logomaker\n",
     "    \"\"\"\n",
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e99d46",
+   "id": "4eede12c",
    "metadata": {},
    "source": [
     "## Plot results"
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6f6a63cf",
+   "id": "1ce57501",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be364f9",
+   "id": "9e592f6b",
    "metadata": {},
    "source": [
     "### Try running the following cell several times. In what ways does the output vary, and why?"
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d6f628",
+   "id": "9ff2e96c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21553b51",
+   "id": "5d0ef186",
    "metadata": {},
    "source": [
     "### Now lets try making different motifs, with different prior Dirichlet alpha\n",
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95378bb5",
+   "id": "8eb5492d",
    "metadata": {},
    "outputs": [],
    "source": [
