more explanatory text

--- a/MCB-practical-week-M6.ipynb
+++ b/MCB-practical-week-M6.ipynb
@@ -92,21 +92,33 @@
    "metadata": {},
    "source": [
     "## Functions to generate and view a motif\n",
-    "We will represent the motif by a list length K of probability distributions over [0..3]"
+    "We will represent the motif by a list length motif_length (K in the lectures) of probability distributions over [0..3]."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ab702d4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3474748082.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    return *** # fill using rng.dirichlet()\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def sample_motif(motif_length=motif_length, alpha=1):\n",
     "    \"\"\"\n",
     "    Create a motif from the dirichlet distribution\n",
     "    \"\"\"\n",
     "    return *** # fill using rng.dirichlet() \n",
+    "    # recall that we want this to return a list of length motif_length, with elements each a list of length 4.\n",
+    "    # each of these elements should be a probability distribution sampled from Dirichlet(alpha,alpha,alpha,alpha)\n",
+    "    # look up in the NumPy documentation what arguments numpy.random.dirichlet() takes to produce this\n",
     "\n",
     "def draw_motif(motif, title=\"\", ax=None):\n",
     "    \"\"\"\n",
@@ -213,7 +225,7 @@
    "id": "1aff7448",
    "metadata": {},
    "source": [
-    "Given instances, we can re-estimate the motif by calculating the Bayesian posterior mean."
+    "We have just worked out how to sample a set of sequence instances from a motif.  We will also need the reverse operation, to infer a motif from a set of sequences.  Here we re-estimate the motif from the simulated instances by calculating the Bayesian posterior mean, and compare the result to the original motif distribution from which it was generated."
    ]
   },
   {
@@ -257,7 +269,7 @@
    "id": "594632d5-0d43-439f-8f27-dd0000e0b07a",
    "metadata": {},
    "source": [
-    "Here we re-estimate the motif, and calculate the KL divergence between our estimate and the true motif, also plotting them side by side.  How does the KL divergence vary as we change alpha, and also as we change the number of instances used (default :10 in the first line below)."
+    "Here we re-estimate the motif, and calculate the KL divergence between our estimate and the true motif, also plotting them side by side.  How does the KL divergence vary as we change alpha, and also as we change the number of instances used (default :10 in the first line below)?"
    ]
   },
   {
@@ -683,19 +695,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cb23b853",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (788187989.py, line 25)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 25\u001b[0;36m\u001b[0m\n\u001b[0;31m    if ***:  # insert acceptance test\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def metropolis_step(sequences, estimated_positions, estimated_motif, current_ll, max_position):\n",
     "    \n",
@@ -968,11 +971,19 @@
    "metadata": {},
    "source": [
     "## Search in TomTom\n",
+    "\n",
+    "There are two alternative ways to do this.  The first is to use the remote MEME-suite server:\n",
     "* go to the [TomTom submission link](https://meme-suite.org/meme/tools/tomtom)\n",
     "* upload the file you have just written (called MCB.meme, unless you renamed it)\n",
     "* select the \"JASPAR (NON-REDUNDANT) DNA\" target motif database\n",
-    "* select the \"JASPAR CORE (2022) nematodes\", unless you want to search all species, in which case leave it as \"JASPAR CORE\"\n",
+    "* select the \"JASPAR CORE (2022) nematodes\", unless you want to search all species, in which case leave it as \"JASPAR CORE (2022)\"\n",
     "* press \"Start search\"\n",
+    "  \n",
+    "The second is to run TomTom locally. This requires that you have downloaded and installed MEME-suite from the [MEME website](https://meme-suite.org/meme/), and also downloaded the [JASPAR 2022 core nonredundant motif database](JASPAR/JASPAR2022_CORE_non-redundant_v2.meme). You then need to make a symlink to Once you have done that, in a command line terminal:\n",
+    "```\n",
+    "tomtom -evalue -thresh=10 MCB.meme JASPAR2022_CORE_non-redundant_v2.meme\n",
+    "```\n",
+    "* then in your finder, look in the tomtom_out directory and double-click on file `tomtom.html`, which should create a new tab in your browser that shows a clickable version of the output.\n",
     "\n",
     "What do you find?"
    ]
